# tskr

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  SECURITY.md  frequent-prompts.md  package-lock.json  project_setup.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: frontend-tests.yml
backend/: .env.example  CLAUDE.md  alembic.ini  database.py  deskbot.db  graph.py  main.py  models.py  prompts.py  pyproject.toml  requirements.txt  run.bat  run.sh  scheduling.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  002_add_template_columns.py  003_add_duration_minutes.py  004_add_priority.py  004_multi_conversation.py  006_add_user_settings.py  20260223_224137_aa56c8eab33d_baseline_orm_models.py  20260223_230114_f20394fbccdd_conversation_orm_model.py
backend/tests/: CLAUDE.md  conftest.py  test_api.py  test_conversations.py  test_database.py  test_graph.py  test_graph_llm.py  test_main.py  test_prompt_categories.py  test_scheduling.py  test_title_generation.py
backend/tests/llm/: test_graph_llm.py  test_intelligence_hardening.py
backend/tests/unit/: test_api.py  test_conversations.py  test_database.py  test_graph.py  test_main.py  test_prompt_categories.py  test_scheduling.py  test_title_generation.py
docs/: ROADMAP.md  day-view-plan.md  priority-scoring.md  recurring-tasks.md  task-identifiers.md
frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.node.json
(+47 files in other folders)
